[package]
name = "softcast-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.1"
ndrustfft = "0.6.0"
objc2 = "0.6.3"
objc2-av-foundation = { version = "0.3.2", features = ["objc2-core-media"] }
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["CVImageBuffer"] }
objc2-foundation = "0.3.2"
