[package]
name = "softcast-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cmake = "0.1.57"
liquid-sys = { path = "crates/liquid-sys" }
ndarray = "0.17.1"
ndrustfft = "0.6.2"
num-complex = "0.4.6"
objc2 = "0.6.3"
objc2-av-foundation = { version = "0.3.2", features = ["objc2-core-media"] }
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["CVImageBuffer"] }
objc2-foundation = { version = "0.3.2", features = ["NSObject"] }
pkg-config = "0.3.32"
rayon = "1.11.0"
zstd = "0.13.3"

[profile.bench]
debug = 1

[profile.release]
debug = 1

[workspace]
members = [
  "crates/liquid-sys",
]
resolver = "2"
